Impementing RequestParam and UriParam